<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--底部导航栏-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorababab"/>

        <LinearLayout
            android:id="@+id/bottom_lly"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/main_ll_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/main_iv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_home" />

                <TextView
                    android:id="@+id/main_tv_home"
                    style="@style/cffffff_10"
                    android:layout_marginTop="4dp"
                    android:text="@string/main_homepage" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/main_ll_terminal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/main_iv_terminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_terminal" />

                <TextView
                    android:id="@+id/main_tv_terminal"
                    style="@style/cffffff_10"
                    android:layout_marginTop="4dp"
                    android:text="@string/main_terminal" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/main_ll_function"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_lv_function"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_function" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/main_ll_data"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/main_iv_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_data" />

                <TextView
                    android:id="@+id/main_tv_data"
                    style="@style/cffffff_10"
                    android:layout_marginTop="4dp"
                    android:text="@string/main_data" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_ll_mine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_lv_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/main_mine" />

                <TextView
                    android:id="@+id/main_tv_mine"
                    style="@style/cffffff_10"
                    android:layout_marginTop="4dp"
                    android:text="@string/main_mine" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</merge>