<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@mipmap/login_icon"/>

            <TextView
                style="@style/cffffff_23"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/login_title"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_cor10"
            android:layout_margin="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/login_edt_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@null"
                    android:hint="@string/login_user_hit"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorbbbdc0"
                    android:textSize="15sp"
                    tools:ignore="Autofill,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorefeff0" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                >


                <EditText
                    android:id="@+id/login_edt_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@null"
                    android:hint="@string/login_pass_hit"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorbbbdc0"
                    android:textSize="15sp"
                    tools:ignore="Autofill,RtlHardcoded" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="5dp"
                    android:background="@color/colorefeff0" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="18dp"
                android:weightSum="5"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/login_edt_yzm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/login_yzm_hit"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/colorbbbdc0"
                    android:textSize="15sp"
                    tools:ignore="Autofill,RtlHardcoded" />


                <ImageView
                    android:id="@+id/login_iv_yzm"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                     />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="5dp"
                android:background="@color/colorefeff0" />


            <Button
                android:id="@+id/login_btn_to"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_change_c7"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:layout_marginBottom="30dp"
                android:text="@string/login_btn"/>


        </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>